# portieris-armada-app

./: .gitreview  .zuul.yaml  centos_iso_image.inc  centos_pkg_dirs  centos_stable_docker_images.inc  centos_tarball-dl.lst  debian_iso_image.inc  debian_pkg_dirs  tox.ini
portieris-helm/centos/: build_srpm.data  portieris-helm.spec  portieris.stable_docker_image
portieris-helm/debian/: dl_hook  meta_data.yaml
portieris-helm/files/: 0001-Add-permissive-cluster-policy-by-default.patch  0002-add-image-pull-secrets-to-images.patch  0004-run-admission-webhooks-as-non-root.patch  0005-add-toleration.patch  caCert.pem  caCert.srl  serverCert.pem  serverKey.pem
python-k8sapp-portieris/centos/: build_srpm.data  python-k8sapp-portieris.spec
python-k8sapp-portieris/debian/: meta_data.yaml
python-k8sapp-portieris/k8sapp_portieris/: .stestr.conf  pylint.rc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
python3-k8sapp-portieris/debian/: meta_data.yaml
python3-k8sapp-portieris/k8sapp_portieris/: README.rst  pylint.rc  setup.cfg  test-requirements.txt  tox.ini
python3-k8sapp-portieris/k8sapp_portieris/k8sapp_portieris/common/: constants.py
python3-k8sapp-portieris/k8sapp_portieris/k8sapp_portieris/helm/: portieris.py  portieris_certs.py  psp_rolebinding.py
python3-k8sapp-portieris/k8sapp_portieris/k8sapp_portieris/lifecycle/: lifecycle_portieris.py
python3-k8sapp-portieris/k8sapp_portieris/k8sapp_portieris/tests/: test_plugins.py
stx-portieris-helm/centos/: build_srpm.data  stx-portieris-helm.spec
stx-portieris-helm/debian/: dl_hook  meta_data.yaml
(+65 files in other folders)
