[metadata]
name = k8sapp-portieris
summary = StarlingX sysinv extensions for portieris
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_portieris

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    portieris = systemconfig.helm_plugins.portieris

systemconfig.helm_plugins.portieris =
    002_portieris = k8sapp_portieris.helm.portieris:PortierisHelm

systemconfig.app_lifecycle =
    portieris = k8sapp_portieris.lifecycle.lifecycle_portieris:PortierisAppLifecycleOperator

[bdist_wheel]
universal = 1
